Archive2/2a/4ec524a5374524/main.cpp
struct delta
{
    template<typename I>
	constexpr void inc(I& i) { ++i; }
    
    template<typename I>
    constexpr I next(I i) { return inc(i), i; }
};

template<int I>
struct A {};

int main ()
{
	A<delta{}.next(4)>{};
}
